--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,10 @@
             android:layout_height="250dp"
             app:srcCompat="@drawable/ruhe_logo" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
         <Button
             android:id="@+id/iniciarSesion"
             android:layout_width="match_parent"
