ESOOOOOOO PATRONAAAAAA DAvid pls no mas

--- a/app/src/main/res/layout/activity_en_accion.xml
+++ b/app/src/main/res/layout/activity_en_accion.xml
@@ -37,6 +37,18 @@
             android:onClick="emergencia"
             android:text="@string/btn_emergencia" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="salir"
+            android:text="@string/btn_salir"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
